[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "package_this_birdcar"
description = "A small example package to learn packaging strategies"
version = "0.1.0"
authors = [
  { name = "Nick Cannariato", email = "devrel@birdcar.dev" },
]
readme = ".github/README.md"
requires-python = ">=3.12"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "typer",
]
[project.optional-dependencies]
dev = ["ruff", "black", "mypy", "nox", "pytest", "twine", "setuptools", "wheel"]

[project.urls]
Homepage = "https://github.com/birdcar/package-this"
Issues = "https://github.com/birdcar/package-this/issues"
